# Sentinel

./: Cargo.toml  Makefile  README.md  build.rs  sentinel.service  wrapper.h
.github/workflows/: release.yml
c_code/elf/: predict.c
c_code/exe/: predict.c
db/: passwd.db
model/: predict.py
rust_lib/: Cargo.toml
rust_lib/src/: lib.rs
rust_lib/src/args_parser/: mod.rs
rust_lib/src/args_parser/file_scanner/: mod.rs
rust_lib/src/args_parser/process_behaviors_analyzer/: mod.rs
rust_lib/src/args_parser/quarantine/: mod.rs
rust_lib/src/args_parser/unauthorized_changes_scanner/: mod.rs
src/: main.rs
src/args_parser/: mod.rs
src/args_parser/file_scanner/: mod.rs
