[package]
name = "sentinel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sentinel"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
hex = "0.4.3"
rusqlite = "0.37.0"
rust_lib = { path = "./rust_lib/" }
sha2 = "0.10.9"

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.48"
clang-sys = "1.8.1"
